<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:scrollbars="vertical"
		tools:context="cc.koumakan.sensorcollector.AvgActivity">
	<ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:scrollbars="vertical"
				android:padding="5dp"
				android:orientation="vertical">
			<TextView
					style="@style/SensorLabel"
					android:textSize="22sp"
					android:text="@string/sensor"/>

			<TextView
					style="@style/SensorLabel"
					android:layout_marginTop="5dp"
					android:id="@+id/accerleration"
					android:text="@string/accerleration"/>
			<LinearLayout
					android:padding="5dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<TextView
						style="@style/Sensor"
						android:text="@string/x"/>
				<TextView
						style="@style/Sensor"
						android:text="@string/y"/>
				<TextView
						style="@style/Sensor"
						android:text="@string/z"/>
			</LinearLayout>
			<LinearLayout
					android:padding="5dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<TextView
						style="@style/Sensor"
						android:id="@+id/accerleration_x"
						android:text="@string/zero"/>
				<TextView
						style="@style/Sensor"
						android:id="@+id/accerleration_y"
						android:text="@string/zero"/>
				<TextView
						style="@style/Sensor"
						android:id="@+id/accerleration_z"
						android:text="@string/zero"/>
			</LinearLayout>

			<TextView
					style="@style/SensorLabel"
					android:layout_marginTop="5dp"
					android:id="@+id/rotation"
					android:text="@string/rotation"/>
			<LinearLayout
					android:padding="5dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<TextView
						style="@style/Sensor"
						android:text="@string/x"/>
				<TextView
						style="@style/Sensor"
						android:text="@string/y"/>
				<TextView
						style="@style/Sensor"
						android:text="@string/z"/>
			</LinearLayout>
			<LinearLayout
					android:padding="5dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<TextView
						style="@style/Sensor"
						android:id="@+id/rotation_x"
						android:text="@string/zero"/>
				<TextView
						style="@style/Sensor"
						android:id="@+id/rotation_y"
						android:text="@string/zero"/>
				<TextView
						style="@style/Sensor"
						android:id="@+id/rotation_z"
						android:text="@string/zero"/>
			</LinearLayout>

			<TextView
					style="@style/SensorLabel"
					android:layout_marginTop="5dp"
					android:id="@+id/magnetometer"
					android:text="@string/magnetometer"/>
			<LinearLayout
					android:padding="5dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<TextView
						style="@style/Sensor"
						android:text="@string/x"/>
				<TextView
						style="@style/Sensor"
						android:text="@string/y"/>
				<TextView
						style="@style/Sensor"
						android:text="@string/z"/>
			</LinearLayout>
			<LinearLayout
					android:padding="5dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<TextView
						style="@style/Sensor"
						android:id="@+id/magnetometer_x"
						android:text="@string/zero"/>
				<TextView
						style="@style/Sensor"
						android:id="@+id/magnetometer_y"
						android:text="@string/zero"/>
				<TextView
						style="@style/Sensor"
						android:id="@+id/magnetometer_z"
						android:text="@string/zero"/>
			</LinearLayout>

			<TextView
					style="@style/SensorLabel"
					android:layout_marginTop="5dp"
					android:id="@+id/orientation"
					android:text="@string/orientation"/>
			<LinearLayout
					android:padding="5dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<TextView
						style="@style/Sensor"
						android:text="@string/x"/>
				<TextView
						style="@style/Sensor"
						android:text="@string/y"/>
				<TextView
						style="@style/Sensor"
						android:text="@string/z"/>
			</LinearLayout>
			<LinearLayout
					android:padding="5dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<TextView
						style="@style/Sensor"
						android:id="@+id/orientation_x"
						android:text="@string/zero"/>
				<TextView
						style="@style/Sensor"
						android:id="@+id/orientation_y"
						android:text="@string/zero"/>
				<TextView
						style="@style/Sensor"
						android:id="@+id/orientation_z"
						android:text="@string/zero"/>
			</LinearLayout>

			<TextView
					style="@style/SensorLabel"
					android:layout_marginTop="5dp"
					android:id="@+id/gravity"
					android:text="@string/gravity"/>
			<LinearLayout
					android:padding="5dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<TextView
						style="@style/Sensor"
						android:text="@string/x"/>
				<TextView
						style="@style/Sensor"
						android:text="@string/y"/>
				<TextView
						style="@style/Sensor"
						android:text="@string/z"/>
			</LinearLayout>
			<LinearLayout
					android:padding="5dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<TextView
						style="@style/Sensor"
						android:id="@+id/gravity_x"
						android:text="@string/zero"/>
				<TextView
						style="@style/Sensor"
						android:id="@+id/gravity_y"
						android:text="@string/zero"/>
				<TextView
						style="@style/Sensor"
						android:id="@+id/gravity_z"
						android:text="@string/zero"/>
			</LinearLayout>

		</LinearLayout>
	</ScrollView>

	<Spinner
			style="@style/SensorButton"
			android:layout_alignParentEnd="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:minWidth="80dp"
			android:id="@+id/spinner">

	</Spinner>

</RelativeLayout>
